# pypielm-app

./: .gitignore  Dockerfile  LICENSE.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
.streamlit/: config.toml
pages/: 1_Train_Model.py  2_Benchmark_Results.py  3_Export_Model.py  4_Battery_Application.py
tests/: conftest.py  test_pages_smoke.py  test_plotting.py  test_sample_data.py  test_session_state.py
utils/: __init__.py  plotting.py  sample_data.py  session_state.py
