[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypielm-app"
version = "0.1.0"
description = "Streamlit web frontend for the PyPIELM library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY-NC-ND 4.0" }
dependencies = [
    "pypielm>=0.1.0",
    "streamlit>=1.30",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/KStruniawski/pypielm-app"
Repository = "https://github.com/KStruniawski/pypielm-app"

[project.scripts]
pypielm-app = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source  = ["utils"]
omit    = ["tests/*"]

[tool.coverage.report]
show_missing = true
